# pythautomata

./: .gitignore  Environment.md  Pipfile  README.md  pyproject.toml  symbolic_automata.ipynb
.github/workflows/: pypi-publish.yml  python-publish.yml
automata/: deterministic_finite_automaton.py
automata/wheighted_automaton_definition/: rnn_queryable_model.py  weighted_state.py  weighted_transition.py
documentation/source/: conf.py  index.rst
exceptions/: model_importing_error.py  non_deterministic_states_exception.py
model_exporters/: dot_exporting_strategy.py
output_models/2 States Moore Machine/: 2 States Moore Machine.dot
output_models/3 States Moore Machine/: 3 States Moore Machine.dot
output_models/MMA implementation of Tomita's grammar 2 automaton/: MMA implementation of Tomita's grammar 2 automaton.dot
output_models/SFA_Tomita's grammar 1 automaton/: SFA_Tomita's grammar 1 automaton.dot
output_models/SFA_Tomita's grammar 2 automaton/: SFA_Tomita's grammar 2 automaton.dot
output_models/SFA_Tomita's grammar 3 automaton/: SFA_Tomita's grammar 3 automaton.dot
output_models/SFA_Tomita's grammar 4 automaton/: SFA_Tomita's grammar 4 automaton.dot
output_models/SFA_Tomita's grammar 5 automaton/: SFA_Tomita's grammar 5 automaton.dot
output_models/SFA_Tomita's grammar 6 automaton/: SFA_Tomita's grammar 6 automaton.dot
output_models/SFA_Tomita's grammar 7 automaton/: SFA_Tomita's grammar 7 automaton.dot
output_models/Tomita's grammar 4 automaton/: Tomita's grammar 4 automaton.dot  Tomita's grammar 4 automaton.ef
output_models/tests/: Tomita's grammar 1 automaton.dot  Tomita's grammar 1 automaton_standard.dot  Tomita's grammar 2 automaton.dot  Tomita's grammar 2 automaton_standard.dot  Tomita's grammar 3 automaton.dot  Tomita's grammar 3 automaton_standard.dot  (+8 more)
pythautomata/: run.py  run_tests.py  tests_nicaud.py
utilities/: encoded_file_importer.py
(+171 files in other folders)
