[tool.poetry]
name = "pythautomata"
version = "0.2.1"
description = "ORT's implementation of various kinds of automata"
authors = ["Federico Vilensky <fedevilensky@gmail.com>", "Franz Mayr", "Ramiro Visca", "Federico Pan", "Sebastián Uriarte", "Pablo Morales", "Kevin Chacon", "Diego Zuluaga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
rope = "*"
recommonmark = "^0.7.1"
sphinx-markdown-builder = "^0.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
